// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto api should return failure for array 1`] = `
{
  "error": {
    "message": "base parameter must be of type string",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute crypto api should return success 1`] = `
{
  "data": {
    "result": 4226.71,
  },
  "result": 4226.71,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
  },
}
`;

exports[`execute crypto api should return success for override 1`] = `
{
  "data": {
    "result": 100,
  },
  "result": 100,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
  },
}
`;

exports[`execute dominance api should return success 1`] = `
{
  "data": {
    "result": 18.127134683884314,
  },
  "result": 18.127134683884314,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1635189786000,
  },
}
`;

exports[`execute globalmarketcap api should return success 1`] = `
{
  "data": {
    "result": 2744386468602.4453,
  },
  "result": 2744386468602.4453,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1635189786000,
  },
}
`;

exports[`execute marketcap api should return success 1`] = `
{
  "data": {
    "result": 499351414399.08246,
  },
  "result": 499351414399.08246,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
  },
}
`;

exports[`execute volume api should return success 1`] = `
{
  "data": {
    "result": 17345604238.153397,
  },
  "result": 17345604238.153397,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
  },
}
`;
